2-k3s/08.servarr/seerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: servarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - seerr.epaflix.com
      secretName: seerr-tls
  rules:
    - host: seerr.epaflix.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  number: 5055
